--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <h2>Portfolio</h2>
     <div class="pdf-viewer">
       <h3>Pitch / Sales Deck</h3>
-      <iframe src="/file-example_PDF_1MB.pdf" allowfullscreen>
+      <iframe src="https://drive.google.com/file/d/1usjeWU49twNMrJney2_AyR_6ScR512to/view?usp=drive_link" allowfullscreen>
         Your browser does not support iframes. 
-        You can <a href="/file-example_PDF_1MB.pdf" target="_blank">download the PDF</a>.
+        You can <a href="https://drive.google.com/file/d/1usjeWU49twNMrJney2_AyR_6ScR512to/view?usp=drive_link" target="_blank">download the PDF</a>.
       </iframe>
     </div>
   </section>
@@ -121,3 +121,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
