--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h2>Our Products</h2>
     <div class="carousel-container">
       <div class="carousel" id="carousel">
-        <div class="slide"><img src="/flushdoor.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
+        <div class="slide"><img src="flushdoor.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
         <div class="slide"><img src="/flushdoor1.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
         <div class="slide"><img src="/flushdoor2.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
         <div class="slide"><img src="/plybox.jpg" alt="Machinery" class="zoomable"><p>Machinery Packaging Boxes</p></div>
@@ -121,4 +121,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
