--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     <div class="carousel-container">
       <div class="carousel" id="carousel">
         <div class="slide"><img src="flushdoor.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
-        <div class="slide"><img src="/flushdoor1.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
-        <div class="slide"><img src="/flushdoor2.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
-        <div class="slide"><img src="/plybox.jpg" alt="Machinery" class="zoomable"><p>Machinery Packaging Boxes</p></div>
-        <div class="slide"><img src="/plybox1.jpg" alt="Packaging Boxes" class="zoomable"><p>Machinery Packaging Boxes</p></div>
-        <div class="slide"><img src="/plywood.jpg" alt="Plywood Sheet" class="zoomable"><p>Plywood Sheet</p></div>
-        <div class="slide"><img src="/plywood1.jpg" alt="Plywood" class="zoomable"><p>Plywood</p></div>
-        <div class="slide"><img src="/ripla.jpg" alt="Ripla" class="zoomable"><p>Ripla</p></div>
+        <div class="slide"><img src="flushdoor1.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
+        <div class="slide"><img src="flushdoor2.jpg" alt="Flush Door" class="zoomable"><p>Flush Door</p></div>
+        <div class="slide"><img src="plybox.jpg" alt="Machinery" class="zoomable"><p>Machinery Packaging Boxes</p></div>
+        <div class="slide"><img src="plybox1.jpg" alt="Packaging Boxes" class="zoomable"><p>Machinery Packaging Boxes</p></div>
+        <div class="slide"><img src="plywood.jpg" alt="Plywood Sheet" class="zoomable"><p>Plywood Sheet</p></div>
+        <div class="slide"><img src="plywood1.jpg" alt="Plywood" class="zoomable"><p>Plywood</p></div>
+        <div class="slide"><img src="ripla.jpg" alt="Ripla" class="zoomable"><p>Ripla</p></div>
       </div>
 
       <!-- Navigation Buttons -->
@@ -121,5 +121,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
